--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
 			<artifactId>sns</artifactId>
 			<version>2.17.97</version>
 		</dependency>
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>dynamodb</artifactId>
+			<version>2.17.97</version>
+		</dependency>
 
 	</dependencies>
 
